phase_one_ws/log/build_2025-06-02_01-54-31/motion_pkg/stderr.log
  File "/home/mido/Music/phase_one_ws/install/motion_pkg/lib/python3.10/site-packages/motion_pkg/path_planning_1.py", line 305
    else quench
         ^^^^^^
SyntaxError: expected ':'

